15/04/2021page products and  navigation improvement

--- a/Carlos/components/forms/index.html
+++ b/Carlos/components/forms/index.html
@@ -13,13 +13,14 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
     <link rel="stylesheet" href="../../css/all.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
   </head>
 
 <body>
   <header class="header">
     <a href="../../index.html">
       <figure class="logo">
-        <img src="../../images/company_logo.png" alt="Company logo">
+        <img src="../../img/logo.png" alt="Company logo">
         <span class="page-title">
           Sandbox
         </span>
@@ -120,11 +121,6 @@
       </form>
     </div>
   </main>
-
-  <style>
-    #input-about {}
-  </style>
-
 </body>
 
 </html>
