--- a/Carlos/components/buttons/buttons.html
+++ b/Carlos/components/buttons/buttons.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cards</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
-          rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-          crossorigin="anonymous" />
-          <link rel="stylesheet" href="css/style.css" />
-        </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <title>Buttons</title>
+</head>
 <body> 
     <header class="header">
-        <figure class="logo">
+       <figure class="logo">
            <img src="img/logo.png" alt="">
            <span class="page-title">
             Sandbox
             </span>
         </figure> 
-        <nav class="navbar">
+       <nav class="navbar">
            <ul class="menu-list">
                 <li class="menu-item">
                     <a href="buttons.html">Buttons</a>
@@ -39,23 +35,28 @@
                     <a href="login.html" class="button is-success">Login</a>
                 </li>   
            </ul>
-        </nav>
-        <div class="container">
-        <div class="card">
-            <div class="product-card">
-                <figure class="product-image">
-                    <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
-                </figure>
-                <div class="product-discretion">
-                    <h3>9999999999.99€</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
+       </nav>
+       
     </header>
+    <main class="buttons-page">
+        <div class="container">
+            <h3>My buttons</h3>
+            <h6>A list of buttons for all uses</h6>
+            <hr>
+        <section>
+            <button class="button is-primary">Primary</button>
+            <hr>
+            <button class="button is-info">Info</button>
+            <hr>
+            <button class="button is-success">Success</button>
+            <hr>
+            <button class="button is-warning">Warning</button>
+            <hr>
+            <button class="button is-danger">Danger</button>
+            <hr>
+        </section>
+        </div>
+    </main>   
     <footer class="footer">
         <nav class="fotter-nav">
             <div class="column is-3">
