--- a/Carlos/components/cards/cards.html
+++ b/Carlos/components/cards/cards.html
@@ -1,90 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <title>Sandbox</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cards</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+          rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+          integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+          crossorigin="anonymous" />
+          <link rel="stylesheet" href="../../css/style.css" />
+        </head>
 <body> 
     <header class="header">
-    <a href="index.html">
-       <figure class="logo">
-           <img src="img/logo.png" alt="">
-           <span class="page-title">
-            Sandbox
-            </span>
-        </figure> 
-    </a>
-       <nav class="navbar">
-           <ul class="menu-list">
-                <li class="menu-item">
-                    <a href="products/products.html">Products</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/buttons/buttons.html">Buttons</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/cards/cards.html">Cards</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/forms/index.html">Forms</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/sidebar/dashboard.html">Sidebar</a>
-                </li>     
-                <li class="menu-item">
-                    <a href="register.html" class="button is-success">Login</a>
-                </li>   
-           </ul>
-       </nav>
-       <section class="hero">
-            <div class="container">
-                <div class="column is-6">
-                   <h1>
-                   Carlos Campos
-                   </h1>
-                   <h2>
-                       Lorem, ipsum dolor.
-                   </h2>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, velit.
-                   </p>
-                   <input type="text" style="padding: 12px 10px; background-color: rgb(241,241,241); border-radius: 5px; border: 1px solid rgb(63,61,86);">
-                   <button style="padding: 12px 10px; color: orange; border: 2px solid rgb(63,61,86); border-radius: 5px; background-color: rgb(63,61,86);">Button button</button>
-               </div>
-                <figure class="column is-6">
-                    <img class="image" src="img/undraw_Code_review_re_woeb.svg" alt="">
-                </figure>
-            </div>
-       </section>
+        <a href="../../index.html">
+           <figure class="logo">
+               <img src="../../img/logo.png" alt="">
+               <span class="page-title">
+                Sandbox
+                </span>
+            </figure> 
+        </a>
+           <nav class="navbar">
+               <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="../../products/products.html">Products</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../buttons/buttons.html">Buttons</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="cards.html">Cards</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../forms/index.html">Forms</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../sidebar/dashboard.html">Sidebar</a>
+                    </li>     
+                    <li class="menu-item">
+                        <a href="../../register.html" class="button is-success">Login</a>
+                    </li>   
+               </ul>
+           </nav>
     </header>
-    <main>
-        <h3 class="title is-3 container" style="margin-top: 15px; align-items: center;">
-            NEW
-        </h3>
-        <div class="carousel">
-            <input type="radio" name="position" />
-              <input type="radio" name="position" />
-              <input type="radio" name="position" checked />
-              <input type="radio" name="position" />
-              <input type="radio" name="position" />
-              <main id="carousel">
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branc.jpg" style="border: 1px solid rgb(150, 150, 150);"></a></div>
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
-            <main>
-            </div>
-        <div class="container">
+      <div class="container">
         <section class="main-section">
             <div class="row">
-                <h3 class="title is-3">
-                    Our specs
-                </h3>
                     <div class="column is-4">
                         <div class="card">
                             <div class="card-cotent">
@@ -116,9 +80,6 @@
                             </div>
                         </div>
                     </div>
-                <h3 class="title is-3">
-                    Products
-                </h3>
                 <div class="column is-6">
                     <div class="card">
                         <div class="product-card">
@@ -173,7 +134,6 @@
                 </div>
         </section>
     </div>
-    </main>
     <footer class="footer">
         <nav class="fotter-nav">
             <div class="column is-3">
