--- a/Carlos/components/buttons/buttons.html
+++ b/Carlos/components/buttons/buttons.html
@@ -11,32 +11,36 @@
 </head>
 <body> 
     <header class="header">
-       <figure class="logo">
-           <img src="img/logo.png" alt="">
-           <span class="page-title">
-            Sandbox
-            </span>
-        </figure> 
-       <nav class="navbar">
-           <ul class="menu-list">
-                <li class="menu-item">
-                    <a href="buttons.html">Buttons</a>
-                </li>
-                <li class="menu-item">
-                    <a href="cards.html">Cards</a>
-                </li>
-                <li class="menu-item">
-                    <a href="forms.html">Forms</a>
-                </li>
-                <li class="menu-item">
-                    <a href="sidebar.html">Sidebar</a>
-                </li>     
-                <li class="menu-item">
-                    <a href="login.html" class="button is-success">Login</a>
-                </li>   
-           </ul>
-       </nav>
-       
+        <a href="../../index.html">
+           <figure class="logo">
+               <img src="../../img/logo.png" alt="">
+               <span class="page-title">
+                Sandbox
+                </span>
+            </figure> 
+        </a>
+           <nav class="navbar">
+               <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="../../products/products.html">Products</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="buttons.html">Buttons</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../cards/cards.html">Cards</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../forms/index.html">Forms</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="../sidebar/dashboard.html">Sidebar</a>
+                    </li>     
+                    <li class="menu-item">
+                        <a href="../../register.html" class="button is-success">Login</a>
+                    </li>   
+               </ul>
+           </nav>
     </header>
     <main class="buttons-page">
         <div class="container">
