16/04/2021 products list part2

--- a/Carlos/scss/productslist.scss
+++ b/Carlos/scss/productslist.scss
@@ -87,6 +87,20 @@
         
     }
 }
+.nav2{
+    text-align: center;
+    background-color: white;
+    margin-top: -16px;
+     li{
+        display: inline-block;
+        font-size: 15px;
+        padding: 20px;
+        font-family: 'Lato', sans-serif;
+        a{
+            color: black;
+        }
+    }
+}
 
 
 
