--- a/Carlos/scss/productslist.scss
+++ b/Carlos/scss/productslist.scss
@@ -30,6 +30,8 @@
     width: 100%;
     display: flex;
     margin: auto;
+    height: auto;
+}
     }
     .ordenar-numero-produtos{
         float: right;
@@ -67,7 +69,7 @@
             color: black;
         }
     }
-}
+
 .product-search{
     float: right;
     color: #767676;
