--- a/tvieira/scss/components/_slider.scss
+++ b/tvieira/scss/components/_slider.scss
@@ -1,5 +1,5 @@
-@import 'components/mixin.scss';
-@import 'components/variables.scss';
+@import 'variables.scss';
+@import 'mixin.scss';
 
 .menu-lists{
 
