--- a/tvieira/scss/components/_variables.scss
+++ b/tvieira/scss/components/_variables.scss
@@ -8,10 +8,11 @@ $FM-grey:#B0B0B0;
 $FM-lightgrey:#cdcdcd;
 $FM-darkwhite:#fafafa;
 $FM-white:#ffffff;
+$primary:#333;
 $success:#4CAF50;
 $danger:#f44336;
 $warning:#ff9800;
-$info: #blue;
+$info: #999;
 
 $font-family: '';
 $font-size: '';
