--- a/jose/scss/components/_grid.scss
+++ b/jose/scss/components/_grid.scss
@@ -14,6 +14,9 @@
   &.is-small{
     margin-left: -8px;
     margin-right: -8px;
+    .column{
+      padding:8px;
+    }
   }
   .column{
     vertical-align: top;
