--- a/jose/scss/products.scss
+++ b/jose/scss/products.scss
@@ -1,5 +1,6 @@
 @import 'components/tabs.scss';
 @import 'components/sliders.scss';
+@import 'components/tags.scss';
 
 .stars .icon{
   color:#ff9800;
@@ -21,6 +22,15 @@
   li{
     display:inline-block;
     padding:8px;
+    &:not(:last-child):after{
+      content: "\f054";
+      font-family: "Font Awesome 5 Free"; 
+      font-weight: 900;
+      float: right;
+      margin-left: 8px;
+      font-size: 12px;
+      line-height: 20px;
+    }
     &:nth-child(2n) {
       padding:0;
     }
@@ -42,10 +52,44 @@
       padding:0;
     }
   }
-  .product-detail{
+  .product{
+    position:relative;
+  }
+
+  .product__image{
+    max-width: 100%;
+    padding:4px 4px 4px 0;
+    img{
+      display: block;
+      max-width: 100%;
+    }
+  }
+
+  .product__tags{
+    position: absolute;
+    right:0;
+    top:0;
+  }
+
+  .product__tag{
+    @extend .tag;
+    display:block;
+    font-size:22px;
+    &:not(:first-child){
+      margin-top:4px;
+    }
+  }
+
+  .product__detail{
+    text-decoration: none;
+
     .title{
       margin-top:8px;
       margin-bottom:4px;
+      color:#333;
+      &:hover{
+        color:$primary;
+      }
     }
     .sales-price{
       font-size:24px;
@@ -56,7 +100,7 @@
       margin-bottom:16px;
     }
   }
-
+  
   .product-controls{
     display:flex;
     justify-content: flex-end;
@@ -73,6 +117,42 @@
     select:nth-child(3){
       min-width: 0;
       width:auto;
+    }
+  }
+
+  .pagination{
+    display: flex;
+    justify-content:center ;
+    .page{
+      &:not(:last-child){
+        margin-right:8px;
+      }
+      .page__item{
+        display:block;
+        text-decoration: none;
+        width: 35px;
+        height:35px;
+        text-align: center;
+        background:#e1e1e1;
+        line-height:35px;
+      }
+
+      .page__item--separator{
+        line-height:35px;
+      }
+
+      &:nth-child(5){
+        .page__item{
+          background:none;
+        }
+      }
+    }
+    .page--active{
+      @extend .page;
+      .page__item{
+        background:$primary;
+        color:#fff;
+      }
     }
   }
 }
