--- a/vitor/scss/components/_grid.scss
+++ b/vitor/scss/components/_grid.scss
@@ -1,45 +1,60 @@
-@import 'variables.scss';
+@import 'components/variables.scss';
 
 .row {
-  display:flex;
-  justify-content: space-between;
-  margin-left: -16px;
-  margin-right: -16px;
-  &.is-multiline{
-    flex-wrap: wrap;
-    .column{
-      padding: 8px;
+    display:flex;
+    justify-content: space-between;
+    margin-left: -16px;
+    margin-right: -16px;
+    &.is-multiline {
+        flex-wrap: wrap;
+        .column {
+            padding: 8px;
+        }
     }
-  }
-  &.is-small{
-    margin-left: -8px;
-    margin-right: -8px;
-  }
-  .column{
-    vertical-align: top;
-    box-sizing: border-box;
-    padding: 16px;
-    width:100%;
-    &.is-3{
-      width:25%;
+    &.is-small {
+        margin-left: -8px;
+        margin-right: -8px;
+        .column {
+            padding: 8px;
+        }
     }
-    &.is-4{
-      width:33.3333333%;
+    .column {
+        vertical-align: top;
+        box-sizing: border-box;
+        padding: 16px;
+        width: 100%;
+        &.is-1 {
+            width: 8.33333333%;
+        }
+        &.is-2 {
+            width: 16.66666666%;
+        }
+        &.is-3 {
+            width: 25%;
+        }
+        &.is-4 {
+            width: 33.33333333%;
+        }
+        &.is-5 {
+            width: 41.66666666%;
+        }
+        &.is-6 {
+            width: 50%;
+        }
+        &.is-7 {
+            width: 58.33333333%;
+        }
+        &.is-8 {
+            width: 66.66666666%;
+        }
+        &.is-9 {
+            width: 75%;
+        }&.is-10 {
+            width: 83.33333333%;
+        }&.is-11 {
+            width: 91.66666666%;
+        }&.is-12 {
+            width: 100%;
+        }
     }
-    &.is-5{
-      width:41.6666666667%;
-    }
-    &.is-6{
-      width:50%;
-    }
-    &.is-7{
-      width:58.3333333333%;
-    }
-    &.is-8{
-      width:66.6666666667%;
-    }
-    &.is-12{
-      width:100%;
-    }
-  }
-} 
+}
