--- a/vitor/scss/components/_variables.scss
+++ b/vitor/scss/components/_variables.scss
@@ -4,14 +4,20 @@ $font-size: '';
 $h1-font-size: '';
 $h2-font-size: '';
 $h3-font-size: '';
+$h4-font-size: '';
+$h5-font-size: '';
+$h6-font-size: '';
 
-$background-color:'';
-$gutter-spacing:'';
+$text: #04050A;
 
-$primary:#665df5;
-$success:#4CAF50;
-$danger:#f44336;
-$warning:#ff9800;
-$info: $primary;
+$background: #f1f1f1;
+$gutter-spacing: '';
+
+$primary:#4a917e;
+$secondary: #575757;
+$success:#1e7c3e;
+$danger: #bb162c;
+$warning: #a04d0a;
+$info: #274e88;
 
 $radius:4px;
