--- a/vitor/scss/main.scss
+++ b/vitor/scss/main.scss
@@ -1,307 +1,323 @@
-<<<<<<< HEAD
-@import 'components/buttons.scss';
-@import 'components/cards.scss';
 @import 'components/grid.scss';
-@import 'components/forms.scss';
-=======
-@import 'components/buttons.scss';
-@import 'components/cards.scss';
-@import 'components/grid.scss';
-@import 'components/forms.scss';
 @import 'components/variables.scss';
->>>>>>> main
+
 
 body {
-  margin: 0;
-  background: #f1f1f1;
-  font-family: Roboto;
-  font-size:16px;
+    margin: 0;
+    background: $background;
+    font-family: Roboto;
+    font-size: 16px;
 }
+
+/* questions about this */
 
 *, ::after, ::before {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
 }
 
-p{
-  margin:0;
-}
-
-main{
-  clear:both;
-}
-
-section{
-  margin:32px 16px;
-}
+/* questions about this */
 
 .has-background-primary {
-  background-color: $primary;
+    background-color: $primary;
 }
+  
+/* questions about this */
 
 .has-text-primary {
-  color: $primary;
+    color: $primary;
 }
 
-figure {
-  margin: 0;
+.text {
+
 }
 
-.image img{
-  max-width:100%;
+
+p {
+    margin: 0;
 }
 
-.title {
-  margin: 0 0 16px;
-  font-weight: 300;
+.title{
+    margin: 0 0 16px;
+    font-weight: 600;
+    &.is-1 {
+        font-size: 48px;
+        font-weight:800;
+        font-family: londina Solid;
+      }
+      
+      &.is-2 {
+        font-size: 32px;
+      }
+      
+      &.is-3 {
+        font-size: 24px;
+      }
+      
+      &.is-5 {
+        font-size: 20px;
+      }
+      
+      ~.subtitle {
+        margin-top: -16px;
+        font-family: Londrina Solid;
+      }
 }
 
 .subtitle {
-  font-weight: 300;
-}
+    margin-top:-8px;
+    font-weight: 300;
+    &.is-1 {
+      font-size: 64px;
+      font-weight:800;
+    }
+    
+    &.is-2 {
+      font-size: 32px;
+    }
+    
+    &.is-3 {
+      font-size: 24px;
+    }
+    
+    &.is-4 {
+      font-size: 20px;
+    }
+    
+    &.is-5 {
+      font-size: 18px;
+    }
+  }
 
-.title.is-1 {
-  font-size: 64px;
-  font-weight:800;
-}
+  .hero {
+    padding: 64px 0 32px;
+    margin: 0;
+    clear: both;
+    background: #04050A
+  }
 
-.title.is-2 {
-  font-size: 32px;
-}
+  .hero-title{
+    @extend.title;
+    @extend.title.is-1;
+    color: #f1f1f1;
+  }
 
-.title.is-3 {
-  font-size: 24px;
-}
+  .hero-subtitle{
+    @extend.subtitle.is-3;
+    color: #f1f1f1;
+  }
 
-.title.is-5 {
-  font-size: 20px;
-}
+  .hero p {
+    color: #bbb;
+  }
 
-.title~.subtitle {
-  margin-top: -16px;
-}
+  .hero .image {
+    max-width: 100%;
+    padding: 16px;
+    box-sizing: border-box;
+  }
 
-.link{
-  color:$primary;
-  text-decoration: underline;
-}
+  .hero .button {
+    width: 100%;
+  }
 
-.link:hover{
-  color:#524ac2;
-}
-
+  .link{
+    color:$primary;
+    text-decoration: underline;
+  }
+  
+  .link:hover{
+    color: $secondary;
+  }
+  
 .header {
-  background: #04050A;
-  padding: 16px;
-  min-height:40px;
+    background: #04050A;
+    padding: 16px;
+    min-height: 40px;
 }
 
 .header .logo {
-  float: left;
-  padding: 8px;
-  margin: 0;
-  padding: 4px 0 0;
+    float: left;
+    padding: 8px;
+    margin: 0;
+    padding: 4px 0 0;
 }
 
-.header .logo img{
-  height:32px;
-  border-radius:8px;
-}
-
-.footer .logo img{
-  height:32px;
-  border-radius:8px;
-}
-
-.footer .logo span{
-  vertical-align: top;
+.header .logo  img{
+    height: 60px;
 }
 
 .header .page-title {
-  font-weight: 600;
-  color: #fff;
-  vertical-align: 50%;
+    font-weight: 42px;
+    vertical-align: 100%;
+    color: #e6e6e6;
+    font-family: Londrina Solid;
 }
 
-.header .navbar {
+.header{
+    display: flex;
+    justify-content: space-between;
+  }
+
+figure{
+    margin: 0;
 }
 
-.navbar-wrapper{
-  display: flex;
-  justify-content: space-between;
+
+
+
+
+.menu-dropdown{
+    display:none;
+    position: absolute;
+    top:35px;
+    left:0;
+    padding:8px;
+    background:#fff;
+    border-radius:$radius;
+    width:120px;
+  }
+  
+  .dropdown-item{
+    display:block;
+    a{
+      display:block;
+      color:$text;
+      padding:16px 12px;
+      text-decoration: none;
+    }
+  }
+
+.menu-item:hover {
+    .menu-dropdown{
+      display:block;
+    }
+  }
+
+.menu-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.hero {
-  padding: 64px 0 32px;
-  margin:0;
-  clear: both;
-  background: #04050A;
-}
-.hero .title,
-.hero .subtitle{
-  color: #fff;
-}
-
-.hero p {
-  color: #bbb;
+.menu-item{
+    display: inline-block;
+    position: relative;
+    margin-top: 22px;
+    padding: 8px;
+    > a:not(.button), span{
+        text-decoration: none;
+        font-size: 14px;
+        color: #e6e6e6;
+        line-height: 18px;
+    }
 }
 
-.hero .image {
-  max-width: 100%;
-  padding: 16px;
-  box-sizing: border-box;
+.menu-item a{
+    text-decoration: none;
+    font-size: 14px;
+    color: #e6e6e6;
+    line-height: 18px;
 }
 
-.hero .button{
-  width:100%;
+.menu-item-expandable{
+    @extend .menu-item;
+    &:after{
+      content: "\f078";
+      font-family: "Font Awesome 5 Free"; 
+      font-weight: 900;
+      margin-left: 4px;
+      font-size: 12px;
+      line-height: 20px;
+      color: #04050A;
+    }
+    &:hover:after{
+      content: "\f077";
+    }
+  }
+
+.menu-item-active{
+    @extend .menu-item;
+    color:$primary;
 }
 
-.menu-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+
+
+
+
+
+
+
+
+
+
+.footer-nav .menu-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.navbar .menu-list .menu-item {
-  display: inline-block;
-  padding: 8px;
+.footer-nav .column.is-3 .menu-list .menu-item a{
+    text-decoration: none;
+    font-size: 12px;
 }
 
-.navbar .menu-list .menu-item a:not(.button) {
-  text-decoration: none;
-  color: #bbb;
-  line-height: 18px;
+.footer .logo img{
+    height: 38px;
 }
 
-.footer-nav .menu-list {
-
+.footer .page-title{
+    font-weight: 42px;
+    vertical-align: 80%;
+    align-items: center;
+    color: #ffffff;
+    font-family: Londrina Solid;
 }
 
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
+.footer .title{
+    color: #fff;
 }
 
-.container.is-small{
-  max-width: 600px;
-  margin: 0 auto;
+.footer{
+    background: #212121;
+    padding: 32px;
 }
 
-.card {
-  background: #fff;
-}
-
-.card>.card-content {
-  padding: 32px;
-}
-
-.product-card .card-content{
-  display: flex;
-  justify-content: space-between;
-}
-
-.product-image{
-  width:40%;
-  height:220px;
-  border-radius:8px;
-}
-
-.product-card .product-detail{
-  width:60%;
-  padding-left:32px;
-}
-.sales-price{
-  color:#FFD045;
-}
-.price{
-  font-size:70%;
-  color:#bbb;
-  text-decoration: line-through;
-}
-
-#product-row .column:nth-child(1) .product-image{
-  background-image:url('https://unsplash.com/photos/LxVxPA1LOVM/download?force=true');
-  background-size: cover;
-  background-position: center;
-}
-
-#product-row .column:nth-child(2) .product-image{
-  background-image:url('https://unsplash.com/photos/164_6wVEHfI/download?force=true');
-  background-size: cover;
-  background-position: center;
-}
-#product-row .column:nth-child(3) .product-image{
-  background-image:url('https://unsplash.com/photos/4qSb_FWhHKs/download?force=true');
-  background-size: cover;
-  background-position: center;
-}
-#product-row .column:nth-child(4) .product-image{
-  background-image:url('https://unsplash.com/photos/_fOL6ebfECQ/download?force=true');
-  background-size: cover;
-  background-position: center;
-}
-
-.icon {
-  padding: 8px;
-  border-radius: 8px;
-}
-
-.icon.is-yellow {
-  background: #FAF8E0;
-  color: #FFD045;
-}
-
-.icon.is-green {
-  background: #DCFCEF;
-  color: #02E879;
-}
-
-.icon.is-purple {
-  background: #F4EBFD;
-  color: #B753E7;
-}
-
-.footer {
-  background: #212121;
-  padding: 32px;
-}
-
-.footer .title {
-  color: #fff;
-}
-
-.footer p,
 .footer label,
 .footer a,
 .footer span {
-  color: #f1f1f1;
+    color: #f1f1f1;
 }
 
-/* .column {
-  display: inline-block;
-  vertical-align: top;
-  box-sizing: border-box;
-  padding: 16px;
+.footer p{
+    color: #f1f1f1;
+    font-size: 11px;
 }
 
-.column.is-3 {
-  width: 24.5%;
+.column{
+    display: inline-block;
+    vertical-align: top;
+    box-sizing: border-box;
+    padding: 16px;
 }
 
-.column.is-4 {
-  width: 33%;
+.column.is-3{
+    width: 24.5%;
 }
 
-.column.is-6 {
-  width: 49.7%;
-} */
+.column.is-4{
+    width: 32.3%;
+}
 
+.column.is-6{
+    width: 49.7%;
+} 
 
-/*
-  Helpers
-*/
-
-.has-text-green{
-  color:#4e9400;
+.rights {
+        font-size: 12px;
+        color: #555;
+        font-weight: 300;
+        font-family: Roboto;
+        text-align: center;
 }
